created geolocation service

--- a/www/index.html
+++ b/www/index.html
@@ -27,6 +27,7 @@
   <script src="js/services.js"></script>
   <script src="js/MomentFilter.js"></script>
   <script src="js/MapService.js"></script>
+  <script src="js/GeolocationService.js"></script>
   <script src="js/CommandService.js"></script>
   <script src="js/ConnectivityMonitor.js"></script>
   <script src="js/CameraService.js"></script>
